###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2004
###########################################
###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2004
###########################################
AC_PREREQ(2.57)
AC_INIT([Soar], [8.6.1], [soar-group@lists.sourceforge.net])
AC_CONFIG_SUBDIRS(SoarKernel gSKI SoarIO)
AM_INIT_AUTOMAKE([foreign])
AC_REVISION($Revision$)
AC_PROG_LIBTOOL
AC_OUTPUT(Makefile)
