[project]
name = "soar-raw"
description = "Raw SML Bindings to the SOAR Cognitive Architecture"
version = "9.6.2"
license = "BSD"
authors = [
    # {name = "Author Name", email = "authoremail@example.com"}
]
readme = "README.md"
# Enscons does not support 3.12 as of yet
requires-python = ">=3.8,<3.12"
dependencies = []
keywords = ["soar"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["pytoml>=0.1", "enscons", "wheel", "scons==4.4.0"]
build-backend = "enscons.api"

[tool.cibuildwheel]
# build-verbosity = 3
skip = ["*-win32", "*-musllinux_*"]

[tool.cibuildwheel.linux]
repair-wheel-command = """\
LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/project/out auditwheel repair -w {dest_dir} {wheel}\
"""

[tool.cibuildwheel.macos]
repair-wheel-command = """\
DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH:/project/out delocate-wheel \
--require-archs {delocate_archs} -w {dest_dir} -v {wheel}\
"""
