#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([SoarIO], [8.6.0])
AM_INIT_AUTOMAKE([SoarIO], [8.6.0])
AC_CONFIG_SRCDIR([ConnectionSML/src/sml_AnalyzeXML.cpp])
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_DISABLE_SHARED
AC_PROG_LIBTOOL
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([conio.h curses.h pthread.h stdlib.h string.h strings.h sys/socket.h sys/types.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_LIB(curses, getch)
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_FUNCS([getcwd gethostbyname gethostname inet_ntoa memset select socket strcasecmp])
AC_OUTPUT(Makefile
		  ConnectionSML/Makefile 
		  ConnectionSML/src/Makefile 
		  ElementXML/Makefile 
		  ElementXML/src/Makefile 
		  CommandLineInterface/Makefile 
		  CommandLineInterface/src/Makefile 
		  ClientSML/Makefile 
		  ClientSML/src/Makefile
		  KernelSML/Makefile
		  KernelSML/src/Makefile
		  examples/Makefile
		  examples/TestCommandLineInterface/Makefile
		  examples/TestCommandLineInterface/src/Makefile)
