###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
SUBDIRS = TOHSML TestCLI TestClientSML TestConnectionSML TestSMLEvents TestSMLPerformance TestSoarPerformance TestMultiAgent FilterC
EXTRA_DIST = LoggerJava SoarJavaDebugger TestJavaSML VisualSoar TSI
