###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
noinst_LTLIBRARIES = libSoarKernel.la

libSoarKernel_la_SOURCES = \
agent.cpp\
backtrace.cpp\
callback.cpp\
chunk.cpp\
consistency.cpp\
decide.cpp\
explain.cpp\
init_soar.cpp\
io.cpp\
kernel_struct.cpp\
lexer.cpp\
mem.cpp\
osupport.cpp\
parser.cpp\
prefmem.cpp\
print.cpp\
production.cpp\
recmem.cpp\
reorder.cpp\
rete.cpp\
rhsfun.cpp\
rhsfun_math.cpp\
soar_rand.cpp\
symtab.cpp\
tempmem.cpp\
trace.cpp\
utilities.cpp\
wmem.cpp

INCLUDES = -I../include

CXXFLAGS = $(SOAR_CXXFLAGS)
