###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
noinst_LTLIBRARIES = libSoarKernel.la

libSoarKernel_la_SOURCES = \
agent.cpp\
backtrace.cpp\
callback.cpp\
chunk.cpp\
consistency.cpp\
decide.cpp\
explain.cpp\
init_soar.cpp\
io.cpp\
kernel_struct.cpp\
lexer.cpp\
mem.cpp\
osupport.cpp\
parser.cpp\
prefmem.cpp\
print.cpp\
production.cpp\
recmem.cpp\
reorder.cpp\
rete.cpp\
rhsfun.cpp\
rhsfun_math.cpp\
soar_rand.cpp\
symtab.cpp\
tempmem.cpp\
trace.cpp\
utilities.cpp\
wmem.cpp\
backtrace.h\
consistency.h\
osupport.h\
portability.h\
prefmem.h\
reorder.h\
../include/agent.h\
../include/callback.h\
../include/chunk.h\
../include/decide.h\
../include/explain.h\
../include/gdatastructs.h\
../include/gski_event_system_data.h\
../include/gski_event_system_functions.h\
../include/gsysparam.h\
../include/init_soar.h\
../include/instantiations.h\
../include/io.h\
../include/kernel.h\
../include/kernel_struct.h\
../include/lexer.h\
../include/mem.h\
../include/parser.h\
../include/print.h\
../include/production.h\
../include/recmem.h\
../include/rete.h\
../include/rhsfun.h\
../include/rhsfun_math.h\
../include/soar_rand.h\
../include/soarkernel.h\
../include/stl_support.h\
../include/symtab.h\
../include/tempmem.h\
../include/trace.h\
../include/utilities.h\
../include/wmem.h\
../include/xmlTraceNames.h


INCLUDES = -I../include

CXXFLAGS = $(SOAR_CXXFLAGS) -fno-strict-aliasing
