###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
SUBDIRS = TestCLI TestClientSML TOHSML TestSoarPerformance TestSMLEvents SoarJavaDebugger

java:
java:
	cd JavaBaseEnvironment && $(MAKE) java
	cd JavaEaters && $(MAKE) java
	cd JavaMissionaries && $(MAKE) java
	cd JavaTOH && $(MAKE) java
	cd JavaTankSoar && $(MAKE) java
	cd SoarJavaDebugger && $(MAKE) java
	cd TestJavaSML && $(MAKE) java
