###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
SUBDIRS = 
EXTRA_DIST = JavaBaseEnvironment JavaEaters JavaMissionaries JavaTOH JavaTankSoar TclEaters

java:
	cd JavaBaseEnvironment && $(MAKE) $(MAKEOPTS) java
	cd JavaEaters && $(MAKE) $(MAKEOPTS) java
	cd JavaMissionaries && $(MAKE) $(MAKEOPTS) java
	cd JavaTOH && $(MAKE) $(MAKEOPTS) java
	cd JavaTankSoar && $(MAKE) $(MAKEOPTS) java
